--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "Laravel package for shortening urls - local driver",
     "type": "library",
     "require": {
-        "pascaldevink/shortuuid": "^2.1"
+        "pascaldevink/shortuuid": "^2.1",
+        "hashids/hashids": "^3.0"
     },
     "authors": [
         {
