Replace references to QEDTeam with AdGem team

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "QEDTeam\\UrlShortener\\": "src/"
+            "AdGem\\UrlShortener\\": "src/"
         }
     }
 }
