Re-require package that was removed under false notions that the package wasn't 8.0 compatible

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "Laravel package for shortening urls - local driver",
     "type": "library",
     "require": {
-        "hashids/hashids": "^4.1"
+        "hashids/hashids": "^4.1",
+        "pascaldevink/shortuuid": "^3.0"
     },
     "require-dev": {
         "php": "^8.0",
