Update shortuuid package to work with php 8.0

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Laravel package for shortening urls - local driver",
     "type": "library",
     "require": {
+        "pascaldevink/shortuuid": "^3.0",
         "hashids/hashids": "^4.1"
     },
     "require-dev": {
